package edu.hitsz.basic;

import edu.hitsz.aircraft.HeroAircraft;

public interface Observer {
    void update(HeroAircraft herocraft);
}
